config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-dep
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: gcr.io/klikmedic/config-server:25e13064c5a1b0fd16ae3b1a43c2bb48d9c3a77f
        ports:
        - containerPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
  labels:
    app: config-server
    service: config-server-svc
spec:
  selector:
    app: config-server
  ports:
  - port: 8888
    name: http
