pasien-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pasien-service-dep
  labels:
    app: pasien-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pasien-service
      version: v1
  template:
    metadata:
      labels:
        app: pasien-service
        version: v1
    spec:
      containers:
      - name: pasien-service
        image: gcr.io/klikmedic/pasien-service:v1.0.2
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: pasien-service-svc
  labels:
    app: pasien-service
    service: pasien-service-svc
spec:
  selector:
    app: pasien-service
  ports:
  - port: 5000
    name: http
    
---

# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pasien-service-svc
spec:
  hosts:
  - "*"
  gateways: 
  - klikmedic-gateway
  http:
  - match:
      - uri: 
          prefix: /api/v1/pasien
    rewrite: 
      uri: /pasien
    route:
    - destination:
        host: pasien-service-svc
        subset: v1
        port:
          number: 5000
        
          
---

# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pasien-service-des
spec:
  host: pasien-service-svc
  subsets:
  - name: v1
    labels:
      version: v1
